# api-docs-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  SETUP.md  glama.json  pyproject.toml  requirements.txt  server.json  smithery.yaml
.github/workflows/: publish.yml
mcpb/: .mcpbignore  manifest.json  pyproject.toml  server.py
mcpb/server/: index.js
npm/: README.md  package.json
src/: __init__.py  config.py  main.py  telemetry.py
src/engine/: __init__.py  background.py  embedder.py  freshness.py  vector_store.py
src/pipeline/: __init__.py  chunker.py  exceptions.py  git_sync.py  markdown_parser.py  models.py
src/utils/: paths.py
